Stop TableView from jumping back to editing cells

--- a/src/main/scss/cells/selectableShortText.scss
+++ b/src/main/scss/cells/selectableShortText.scss
@@ -1,5 +1,5 @@
 .completion-list {
-  z-index: 1;
+  z-index: 2;
   position: absolute;
   @include grud-shadow();
   width: calc(100% + 20px);
